--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,34 +10,45 @@ AllCops:
     - 'tmp/**/*'
     - 'test/**/*'
 
-ConditionalAssignment:
+Style/ConditionalAssignment:
   Enabled: false
-StringLiterals:
+Style/StringLiterals:
   Enabled: false
-RedundantReturn:
+Style/RedundantReturn:
   Enabled: false
-Documentation:
+Style/Documentation:
   Enabled: false
-WordArray:
+Style/WordArray:
   Enabled: false
-AbcSize:
+Metrics/AbcSize:
   Enabled: false
-MutableConstant:
+Style/MutableConstant:
   Enabled: false
-SignalException:
+Style/SignalException:
   Enabled: false
 
-CyclomaticComplexity:
+Metrics/CyclomaticComplexity:
   Enabled: false
-MissingRespondToMissing:
+Style/MissingRespondToMissing:
   Enabled: false
-MethodMissingSuper:
+Style/MethodMissingSuper:
   Enabled: false
 Style/FrozenStringLiteralComment:
   Enabled: false
-LineLength:
-  Max: 120
+Layout/LineLength:
+  Max: 150
 Style/EmptyMethod:
   Enabled: false
 Bundler/OrderedGems:
   Enabled: false
+Lint/RaiseException:
+  Enabled: false
+Lint/StructNewOverride:
+  Enabled: false 
+Style/HashEachMethods:
+  Enabled: false
+Style/HashTransformKeys: 
+  Enabled: false
+Style/HashTransformValues: 
+  Enabled: false
+  
