--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "ruby.rubocop.executePath": "/home/user/.rbenv/shims/",
-    "ruby.rubocop.configFilePath": "/home/user/code/hugopcveloso/covid_forum/.rubocop.yml"
+    "ruby.rubocop.configFilePath": "/home/user/code/hugopcveloso/covid_forum/.rubocop.yml",
+    "editor.tabSize": 2
 }
