added upvotes to comments

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "ruby.rubocop.executePath": "/home/user/.rbenv/shims/",
     "ruby.rubocop.configFilePath": "/home/user/code/hugopcveloso/covid_forum/.rubocop.yml",
-    "editor.tabSize": 2
+		"editor.tabSize": 2,
+		"editor.detectIndentation": false
 }
