--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -51,5 +51,5 @@ Style/HashTransformKeys:
   Enabled: false
 Style/HashTransformValues: 
   Enabled: false
-Style/Tab:
+Layout/Tab:
   Enabled: false
