--- a/config/database.yml
+++ b/config/database.yml
@@ -21,25 +21,21 @@ default: &default
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
-
 development:
   <<: *default
   database: covid_forum_development
-
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
 
-
   # The password associated with the postgres role (username).
-
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
-  host: '/var/run/postgresql'
+  host: "/var/run/postgresql"
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
@@ -83,5 +79,5 @@ test:
 production:
   <<: *default
   database: covid_forum_production
-  username: covid_forum
+  username: hugov
   password: <%= ENV['COVID_FORUM_DATABASE_PASSWORD'] %>
